Fixes the results to be more readable. I also fixed the dollar sign to not be required and put the pages back in.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,31 @@ body {
     padding: 0;
 }
 
+.dark{
+    background-color: lightgray;
+    color: black;
+}
+
+.light{
+    background-color: whitesmoke;
+    color: black;
+}
+
+.odd{
+    background-color: lightgray;
+    color: black;
+}
+
+.even{
+    background-color: whitesmoke;
+    color: black;
+}
+
+.right{
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #header {
     margin-top: 100px;
     background-color: rgba(66, 66, 66, .7);
@@ -21,27 +46,32 @@ h1 {
 
 #instructions{
     text-align: center;
+    background-color: darkblue;
+    color: whitesmoke;
 }
 
 #eachResult{
-    color: black;
+    color: whitesmoke;
     font-size: 15px;
     height: 200px;
 }
 
-#result{
-    background: rgba(255,255,255,.5);
+#results{
     padding: 15px;
-}
-
-.info{
-    background: rgba(255,255,255,.1);
-    text-shadow: 2px 2px white;
+    font-weight: 900;
+    color: whitesmoke;
 }
 
 img {
     width: 205px;
     height: 115px;
+}
+
+#next{
+    color: whitesmoke;
+    font-size: 25px;
+    font-weight: 600;
+    cursor: pointer;
 }
 
 #form-row {
@@ -74,6 +104,7 @@ label {
 
 #home-Submit {
     margin-top: 40px;
+    padding-bottom: 15px;
     justify-content: center;
 }
 
@@ -81,6 +112,7 @@ label {
     height: 50px;
     margin-right: 10px;
 }
+
 
 
 /* ------------MAP CSS-------*/
@@ -92,9 +124,6 @@ label {
     width: 50%;
 }
 
-#returned{
-    background-color: whitesmoke;
-}
 
 #headmap {
     display: flex;
